        * thread.c (thread_cleanup_func): Don't touch native threading           resource at fork. Sadly this is purely bandaid. We need to           implement proper fix later. [Bug #4169] [ruby-core:33767]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@30272 b2dd03c8-39d4-4d8f-98ff-823fe69b080e